--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -7,21 +7,21 @@ on:
 
 jobs:
   build:
+    name: Build and Push the Image
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Checkout code
+    - name: Check out code
       uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
     - name: Log in to Docker Hub
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    
     - name: Build and push Docker image
-      run: |
-        docker buildx build --tag arastusharma1/go-app:latest --push .
+      uses: docker/build-push-action@v5
+      with:
+        push: true
+        tags: arastusharma1/go-app:${{ github.sha }}, arastusharma1/go-app:latest
